 _____________________________________________________________________________
/                                                                             \
| Chirpy! v0.3                                                     YYYY.MM.DD |
\_____________________________________________________________________________/

* Added statistics page
* Now keeping (and displaying) vote counts per quote
* Added metadata-based logging, including search
* Made rating and reporting links use POST instead of GET and added
  intermediate confirmation page for non-AJAX users
* You can now edit quotes before approving them
* Added wildcard searching
* Made tag cloud ignore unapproved quotes
* Added dynamic tag cloud pruning based on number of quotes
* Administrative interface now only displays tabs that are available
* Made pages point to their own feeds instead of QotW (where applicable)
* Added description field in chirpy.ini, for use in feeds
* Made quote titles in feeds more meaningful
* Put page title in feed title instead of subtitle
* Improved feed modification detection
* Made templates use HTML::Template's caching feature, which is pretty fast
* Template parameters are now global, which means you can include parameters
  from outside a loop
* Optimized template parsing a little
* Moved administration-related subs to a separate class, speeding up non-admin
  pages somewhat
* Extended quick style linking method: <> is now omitted and link text can be
  changed by separating it from URL by whitespace, e.g.
    Surf to <http://chirpy.sourceforge.net/ The Chirpy! web site>!
* Simplified RSS feed: using HTML in <description> and removing
  <content:encoded> and <xhtml:body>, making feedvalidator.org like it more
* Bugfix: live rating no longer throws a JavaScript error in IE
* Bugfix: quote rating up log entry now includes quote ID (#1493589)
* Just for fun, quote IDs can now be in binary and hex notation too, as per
  <http://quotes.burntelectrons.org/844>.
